overflow important on body tag because dialogs inline hidden for some reason... no bugs doing that so yay...

--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -11,18 +11,18 @@
 html {
   border-collapse: collapse;
   box-sizing: border-box;
-  /* min-height: 100%; */
   overflow-x: hidden;
 }
-
+/* 
 body, #root {
   height: 100%;
-}
+} */
 
 body {
   background: rgb(247, 247, 247);
   margin: 0;
   padding: 0;
+  overflow: visible !important;
 }
 
 #root {
